# 3DPowerOptimization

./: README.md
pride/: 3DPowerOptimization.pl
src/: CMakeLists.txt  IJMacros.txt  MainCxxFile.cxx  MakePerlAndPackageConfigurationFiles.pl
